create and update quest (mongo)
