# docs/swagger.json
@@ -259,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.QuestDTO"
+                            "$ref": "#/definitions/handler.QuestRequest"
                         }
                     },
                     {
@@ -485,45 +485,8 @@
             }
         },
         "/quests/{id}/rating/{user_id}": {
-            "get": {
-                "description": "Get quest rating",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Quests"
-                ],
-                "summary": "Get Rating",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Quest ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
             "post": {
-                "description": "Update quest rating",
+                "description": "Rate a quest",
                 "consumes": [
                     "application/json"
                 ],
@@ -533,30 +496,37 @@
                 "tags": [
                     "Quests"
                 ],
-                "summary": "Update Rating",
+                "summary": "Completion",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Quest ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Rating to save",
-                        "name": "rating",
+                        "description": "Quest completed by a User",
+                        "name": "completion",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.Rating"
+                            "$ref": "#/definitions/handler.CompletionRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Quest ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -924,7 +894,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.UserRequest"
+                            "$ref": "#/definitions/domain.UserDTO"
                         }
                     }
                 ],
@@ -978,7 +948,7 @@
                 }
             }
         },
-        "/users/sessions/google": {
+        "/users/sessions/facebook": {
             "post": {
                 "description": "Login user",
                 "consumes": [
@@ -1015,7 +985,7 @@
                 }
             }
         },
-        "/users/sessions/facebook": {
+        "/users/sessions/google": {
             "post": {
                 "description": "Login user",
                 "consumes": [
@@ -1528,7 +1498,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.UserRequest"
+                            "$ref": "#/definitions/handler.UserPasswordChangeRequest"
                         }
                     },
                     {
@@ -1557,7 +1527,16 @@
         "domain.QuestDTO": {
             "type": "object",
             "properties": {
-                "name": {
+                "inventory": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "quest_id": {
+                    "type": "string"
+                },
+                "scene": {
                     "type": "string"
                 }
             }
@@ -1570,6 +1549,9 @@
                 },
                 "facebook": {
                     "type": "boolean"
+                },
+                "firebaseToken": {
+                    "type": "string"
                 },
                 "google": {
                     "type": "boolean"
@@ -1590,9 +1572,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                },
-                "firebaseToken": {
                     "type": "string"
                 }
             }
@@ -1646,9 +1625,6 @@
                 "email": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string"
                 }
@@ -1674,6 +1650,23 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.QuestRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "inventory": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "scene": {
+                    "type": "integer"
                 }
             }
         },
@@ -1714,6 +1707,17 @@
                 }
             }
         },
+        "handler.UserPasswordChangeRequest": {
+            "type": "object",
+            "properties": {
+                "newPassword": {
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.UserRequest": {
             "type": "object",
             "properties": {
@@ -1722,6 +1726,9 @@
                 },
                 "facebook": {
                     "type": "boolean"
+                },
+                "firebaseToken": {
+                    "type": "string"
                 },
                 "google": {
                     "type": "boolean"
@@ -1739,9 +1746,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                },
-                "firebaseToken": {
                     "type": "string"
                 }
             }
@@ -1788,14 +1792,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "handler.Rating": {
-            "type": "object",
-            "properties": {
-                "rating": {
-                    "type": "number"
                 }
             }
         }
